# startmeapp

./: CMakeLists.txt  CostoCalculador.cpp  CostoCalculador.h  main.cpp  resources.qrc
data/: precios.json
qml/: DialogConfig.qml  Formulario.qml  FormularioPanaderia.qml  main.qml
